--- a/user_management/templates/changepassword.html
+++ b/user_management/templates/changepassword.html
@@ -25,6 +25,32 @@
     <title>Change Password Form</title>
   </head>
   <body>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark sticky-top">
+      <a class="navbar-brand" href="#">Orient</a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+    
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav mr-auto">
+          <li class="nav-item">
+            <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="registration.html">Registration</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="login.html">Login</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="forgitpassword.html">Reset Password</a>
+          </li>
+          <li class="nav-item active">
+            <a class="nav-link" href="changepassword.html">Change Password</a>
+          </li>
+        </ul>
+      </div>
+    </nav>
     <div id="logreg-forms">
       <form class="form-signin">
         <h1 class="h3 mb-3 font-weight-normal" style="text-align: center">
