--- a/user_management/templates/login.html
+++ b/user_management/templates/login.html
@@ -25,22 +25,37 @@
     <title>Bootstrap 4 Login/Register Form</title>
   </head>
   <body>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark sticky-top">
+      <a class="navbar-brand" href="#">Orient</a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+    
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav mr-auto">
+          <li class="nav-item">
+            <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="registration.html">Registration</a>
+          </li>
+          <li class="nav-item active">
+            <a class="nav-link" href="login.html">Login</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="forgitpassword.html">Reset Password</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="changepassword.html">Change Password</a>
+          </li>
+        </ul>
+      </div>
+    </nav>
     <div id="logreg-forms">
       <form class="form-signin">
         <h1 class="h3 mb-3 font-weight-normal" style="text-align: center">
           Sign in
         </h1>
-        <div class="social-login">
-          <button class="btn facebook-btn social-btn" type="button">
-            <span><i class="fab fa-facebook-f"></i> Sign in with Facebook</span>
-          </button>
-          <button class="btn google-btn social-btn" type="button">
-            <span
-              ><i class="fab fa-google-plus-g"></i> Sign in with Google+</span
-            >
-          </button>
-        </div>
-        <p style="text-align:center">OR</p>
         <input
           type="email"
           id="inputEmail"
@@ -60,113 +75,17 @@
         <button class="btn btn-success btn-block" type="submit">
           <i class="fas fa-sign-in-alt"></i> Sign in
         </button>
-        <a href="#" id="forgot_pswd">Forgot password?</a>
+        <a href="forgitpassword.html" id="forgot_pswd">Forgot password?</a>
         <hr />
         <!-- <p>Don't have an account!</p>  -->
         <button class="btn btn-primary btn-block" type="button" id="btn-signup">
           <i class="fas fa-user-plus"></i> Sign up New Account
         </button>
       </form>
-
-      <form action="/reset/password/" class="form-reset">
-        <input
-          type="email"
-          id="resetEmail"
-          class="form-control"
-          placeholder="Email address"
-          required=""
-          autofocus=""
-        />
-        <button class="btn btn-primary btn-block" type="submit">
-          Reset Password
-        </button>
-        <a href="#" id="cancel_reset"><i class="fas fa-angle-left"></i> Back</a>
-      </form>
-
-      <form action="/signup/" class="form-signup">
-        <div class="social-login">
-          <button class="btn facebook-btn social-btn" type="button">
-            <span><i class="fab fa-facebook-f"></i> Sign up with Facebook</span>
-          </button>
-        </div>
-        <div class="social-login">
-          <button class="btn google-btn social-btn" type="button">
-            <span
-              ><i class="fab fa-google-plus-g"></i> Sign up with Google+</span
-            >
-          </button>
-        </div>
-
-        <p style="text-align:center">OR</p>
-
-        <input
-          type="text"
-          id="user-name"
-          class="form-control"
-          placeholder="Full name"
-          required=""
-          autofocus=""
-        />
-        <input
-          type="email"
-          id="user-email"
-          class="form-control"
-          placeholder="Email address"
-          required
-          autofocus=""
-        />
-        <input
-          type="password"
-          id="user-pass"
-          class="form-control"
-          placeholder="Password"
-          required
-          autofocus=""
-        />
-        <input
-          type="password"
-          id="user-repeatpass"
-          class="form-control"
-          placeholder="Repeat Password"
-          required
-          autofocus=""
-        />
-
-        <button class="btn btn-primary btn-block" type="submit">
-          <i class="fas fa-user-plus"></i> Sign Up
-        </button>
-        <a href="#" id="cancel_signup"
-          ><i class="fas fa-angle-left"></i> Back</a
-        >
-      </form>
+  
       <br />
     </div>
-    <p style="text-align:center">
-      <a
-        href="http://bit.ly/2RjWFMfunction toggleResetPswd(e){
-    e.preventDefault();
-    $('#logreg-forms .form-signin').toggle() // display:block or none
-    $('#logreg-forms .form-reset').toggle() // display:block or none
-}
 
-function toggleSignUp(e){
-    e.preventDefault();
-    $('#logreg-forms .form-signin').toggle(); // display:block or none
-    $('#logreg-forms .form-signup').toggle(); // display:block or none
-}
-
-$(()=>{
-    // Login Register Form
-    $('#logreg-forms #forgot_pswd').click(toggleResetPswd);
-    $('#logreg-forms #cancel_reset').click(toggleResetPswd);
-    $('#logreg-forms #btn-signup').click(toggleSignUp);
-    $('#logreg-forms #cancel_signup').click(toggleSignUp);
-})g"
-        target="_blank"
-        style="color:black"
-        >By Artin</a
-      >
-    </p>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script
       src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
