--- a/user_management/templates/registration.html
+++ b/user_management/templates/registration.html
@@ -12,32 +12,38 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
 
-    <title>Laravel</title>
+    <title>Registration</title>
 </head>
 <body>
 
-<nav class="navbar navbar-expand-lg navbar-light navbar-laravel">
-    <div class="container">
-    <a class="navbar-brand" href="#">Laravel</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-    </button>
-
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav ml-auto">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark sticky-top">
+        <a class="navbar-brand" href="#">Orient</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+      
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav mr-auto">
             <li class="nav-item">
-                <a class="nav-link" href="#">Login</a>
+              <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+            </li>
+            <li class="nav-item active">
+              <a class="nav-link" href="registration.html">Registration</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#">Register</a>
+              <a class="nav-link" href="login.html">Login</a>
             </li>
-        </ul>
+            <li class="nav-item">
+              <a class="nav-link" href="forgitpassword.html">Reset Password</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="changepassword.html">Change Password</a>
+            </li>
+          </ul>
+        </div>
+      </nav>
 
-    </div>
-    </div>
-</nav>
-
-<main class="my-form">
+<main class="my-form pt-4">
     <div class="cotainer">
         <div class="row justify-content-center">
             <div class="col-md-8">
