--- a/user_management/templates/user_management/logout.html
+++ b/user_management/templates/user_management/logout.html
@@ -36,12 +36,21 @@
           <li class="nav-item">
             <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
           </li>
+          {% if user.is_authenticated %}
           <li class="nav-item">
-            <a class="nav-link" href="registration.html">Registration</a>
+            <a class="nav-link" href="{% url 'profile' %}">Profile</a>
           </li>
-          <li class="nav-item active">
-            <a class="nav-link" href="login.html">Login</a>
+          <li class="nav-item">
+            <a class="nav-link" href="{% url 'logout' %}">Logout</a>
           </li>
+          {% else %}
+          <li class="nav-item">
+            <a class="nav-link" href="{% url 'register' %}">Registration</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="{% url 'login' %}">Login</a>
+          </li>
+          {% endif %}
           <li class="nav-item">
             <a class="nav-link" href="forgitpassword.html">Reset Password</a>
           </li>
@@ -52,38 +61,9 @@
       </div>
     </nav>
     <div id="logreg-forms">
-      <form class="form-signin">
-        <h1 class="h3 mb-3 font-weight-normal" style="text-align: center">
-          Sign in
-        </h1>
-        <input
-          type="email"
-          id="inputEmail"
-          class="form-control"
-          placeholder="Email address"
-          required=""
-          autofocus=""
-        />
-        <input
-          type="password"
-          id="inputPassword"
-          class="form-control"
-          placeholder="Password"
-          required=""
-        />
-
-        <button class="btn btn-success btn-block" type="submit">
-          <i class="fas fa-sign-in-alt"></i> Sign in
-        </button>
-        <a href="forgitpassword.html" id="forgot_pswd">Forgot password?</a>
-        <hr />
-        <!-- <p>Don't have an account!</p>  -->
-        <button class="btn btn-primary btn-block" type="button" id="btn-signup">
-          <i class="fas fa-user-plus"></i> Sign up New Account
-        </button>
-      </form>
-  
+      <h3>Logged out</h3>
       <br />
+      <small><a href="{% url 'login' %}">Login again </a></small>
     </div>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
