--- a/user_management/templates/user_management/profile.html
+++ b/user_management/templates/user_management/profile.html
@@ -60,7 +60,7 @@
                     <div class="card">
                         <div class="card-header">Profile</div>
                         <div class="card-body">
-                        <h3>{% user.username %}</h3>
+                        <h3>{{ user.username }}</h3>
                         </div>
                     </div>
             </div>
