--- a/orient_advances/templates/orient_advances/advance_request.html
+++ b/orient_advances/templates/orient_advances/advance_request.html
@@ -13,7 +13,7 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
 
-    <title>Login</title>
+    <title>Advance Request</title>
 </head>
 <body>
 
@@ -56,31 +56,45 @@
         </div>
       </nav>
 
+      {% if messages %}
+          {% for message in messages %}
+              <div class="alert alert-{{ message.tags }}">
+                  {{ message }}
+              </div>
+          {% endfor %}
+      {% endif %}
+
 <main class="my-form pt-4">
     <div class="cotainer">
         <div class="row justify-content-center">
-            <div class="col-md-4">
+            <div class="col-md-5">
                     <div class="card">
-                        <div class="card-header">Login</div>
+                        <div class="card-header">Register</div>
                         <div class="card-body">
                             <form name="my-form" onsubmit="return validform()" action="" method="POST">{% csrf_token %}
-                                {% if messages %}
-                                    {% for message in messages %}
-                                        <div class="alert alert-{{ message.tags }}">
-                                            {{ message }}
-                                        </div>
-                                    {% endfor %}
-                                {% endif %}
                                 <fieldset class="form-group">
-                                    {{ form|crispy }}
+                                  {% for field in Advance_Form %}
+                                  <p>
+                                      {{ field.label_tag }}
+                                      {{ field }}
+                                      
+                                      {% if field.help_text %}
+                                      <br>
+                                          <small style="color: gray; margin-left: auto;">{{ field.help_text }}</small>
+                                      {% endif %}
+                              
+                                      {% for error in field.errors %}
+                                          <p style="color:red;">{{ error }}</p>
+                                      {% endfor %}
+                                  </p>
+                                  {% endfor %}
                                 </fieldset>
-                                <div class="col-md-4">
+                                <div class="col-md-3">
                                     <button type="submit" class="btn btn-primary">
-                                    Login
+                                        Submit
                                     </button>
                                 </div>
                             </form>
-                            <small>Do not have an Account? <a href="{% url 'register' %}" class="ml-2">Register Now</a></small>
                         </div>
                     </div>
             </div>
