--- a/orient_advances/templates/orient_advances/advance_request.html
+++ b/orient_advances/templates/orient_advances/advance_request.html
@@ -1,108 +1,50 @@
-{% load crispy_forms_tags %}
-<!doctype html>
-<html lang="en">
-<head>
-    <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+{% extends 'base.html' %} {% load crispy_forms_tags %} 
 
-    <!-- Fonts -->
-    <link rel="dns-prefetch" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css?family=Raleway:300,400,600" rel="stylesheet" type="text/css">
-    <link rel="icon" href="Favicon.png">
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
+{% block title %}
+<title>Advance Request</title>
+{% endblock title %}
 
-    <title>Advance Request</title>
-</head>
-<body>
+{% block PageTitle %}
+<h1>Advance Request</h1>
+  {% endblock PageTitle %}
 
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark sticky-top">
-        <a class="navbar-brand" href="#">Orient</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-      
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-          <ul class="navbar-nav mr-auto">
-            <li class="nav-item">
-              <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-            </li>
-            {% if user.is_authenticated %}
-            <li class="nav-item">
-              <a class="nav-link" href="{% url 'profile' %}">Profile</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="{% url 'logout' %}">Logout</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="{% url 'advance' %}">Request Advance</a>
-            </li>
-            {% else %}
-            <li class="nav-item">
-              <a class="nav-link" href="{% url 'register' %}">Registration</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="{% url 'login' %}">Login</a>
-            </li>
-            {% endif %}
-            <li class="nav-item">
-              <a class="nav-link" href="forgitpassword.html">Reset Password</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="changepassword.html">Change Password</a>
-            </li>
-          </ul>
-        </div>
-      </nav>
-
-      {% if messages %}
-          {% for message in messages %}
-              <div class="alert alert-{{ message.tags }}">
-                  {{ message }}
-              </div>
-          {% endfor %}
-      {% endif %}
+{% block Content %}
 
 <main class="my-form pt-4">
     <div class="cotainer">
         <div class="row justify-content-center">
-            <div class="col-md-5">
-                    <div class="card">
+          <div class="col-md-5">
+            <div class="card">
                         <div class="card-header">Register</div>
                         <div class="card-body">
-                            <form name="my-form" onsubmit="return validform()" action="" method="POST">{% csrf_token %}
+                          <form name="my-form" onsubmit="return validform()" action="" method="POST">{% csrf_token %}
                                 <fieldset class="form-group">
                                   {% for field in Advance_Form %}
                                   <p>
-                                      {{ field.label_tag }}
+                                    {{ field.label_tag }}
                                       {{ field }}
                                       
                                       {% if field.help_text %}
                                       <br>
-                                          <small style="color: gray; margin-left: auto;">{{ field.help_text }}</small>
+                                      <small style="color: gray; margin-left: auto;">{{ field.help_text }}</small>
                                       {% endif %}
                               
                                       {% for error in field.errors %}
                                           <p style="color:red;">{{ error }}</p>
-                                      {% endfor %}
+                                          {% endfor %}
                                   </p>
                                   {% endfor %}
                                 </fieldset>
                                 <div class="col-md-3">
-                                    <button type="submit" class="btn btn-primary">
+                                  <button type="submit" class="btn btn-primary">
                                         Submit
                                     </button>
-                                </div>
+                                  </div>
                             </form>
-                        </div>
+                          </div>
                     </div>
             </div>
-        </div>
+          </div>
     </div>
 </main>
-<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
-</body>
-</html>
+{% endblock Content %}
