--- a/user_management/templates/forgitpassword.html
+++ b/user_management/templates/forgitpassword.html
@@ -1,56 +1,10 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <link
-      rel="stylesheet"
-      href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
-      integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
-      crossorigin="anonymous"
-    />
-    <script src="//maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
-    <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-    <link
-      rel="stylesheet"
-      href="https://use.fontawesome.com/releases/v5.3.1/css/all.css"
-      integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU"
-      crossorigin="anonymous"
-    />
-    <link
-      rel="stylesheet"
-      href="../static/orient_advances/dist//css/style.css"
-    />
-    <title>Bootstrap 4 Login/Register Form</title>
-  </head>
-  <body>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark sticky-top">
-      <a class="navbar-brand" href="#">Orient</a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-    
-      <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav mr-auto">
-          <li class="nav-item">
-            <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="registration.html">Registration</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="login.html">Login</a>
-          </li>
-          <li class="nav-item active">
-            <a class="nav-link" href="forgitpassword.html">Reset Password</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="changepassword.html">Change Password</a>
-          </li>
-        </ul>
-      </div>
-    </nav>
+
+{% extends 'base.html' %} {% load crispy_forms_tags %} {% block title %}
+<title>Forget Password</title>
+{% endblock title %} {% block PageTitle %}
+<h1>Forget Password</h1>
+{% endblock PageTitle %} {% block Content %}
+
     <div class="form-gap"></div>
     <div class="container">
       <div class="row">
@@ -109,5 +63,4 @@
         </div>
       </div>
     </div>
-  </body>
-</html>
+    {% endblock Content %}
