--- a/user_management/templates/user_management/profile.html
+++ b/user_management/templates/user_management/profile.html
@@ -1,88 +1,39 @@
-{% load crispy_forms_tags %}
-<!doctype html>
-<html lang="en">
-<head>
-    <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
-    <!-- Fonts -->
-    <link rel="dns-prefetch" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css?family=Raleway:300,400,600" rel="stylesheet" type="text/css">
-    <link rel="icon" href="Favicon.png">
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
-
-    <title>Login</title>
-</head>
-<body>
-
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark sticky-top">
-        <a class="navbar-brand" href="#">Orient</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-      
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-          <ul class="navbar-nav mr-auto">
-            <li class="nav-item">
-              <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-            </li>
-            {% if user.is_authenticated %}
-            <li class="nav-item">
-                <a class="nav-link" href="{% url 'profile' %}">Profile</a>
-              </li>
-              <li class="nav-item">
-              <a class="nav-link" href="{% url 'logout' %}">Logout</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="{% url 'advance' %}">Request Advance</a>
-            </li>
-            {% else %}
-            <li class="nav-item">
-              <a class="nav-link" href="{% url 'register' %}">Registration</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="{% url 'login' %}">Login</a>
-            </li>
-            {% endif %}
-            <li class="nav-item">
-              <a class="nav-link" href="forgitpassword.html">Reset Password</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="changepassword.html">Change Password</a>
-            </li>
-          </ul>
-        </div>
-      </nav>
+{% extends 'base.html' %} {% load crispy_forms_tags %} {% block title %}
+<title>Login</title>
+{% endblock title %} {% block PageTitle %}
+<h1>Login</h1>
+{% endblock PageTitle %} {% block Content %}
 
 <main class="my-form pt-4">
-    <div class="cotainer">
-        <div class="row justify-content-center">
-            <div class="col-md-6">
-                    <div class="card">
-                        <div class="card-header">{{ user }} Profile</div>
-                        <div class="card-body">
-                          <div class="content-section">
-                            <div class="media">
-                              <img class="rounded-circle account-img" src="{{ user.profile.image.url }}">
-                              <div class="media-body">
-                                <h2 class="account-heading">{{ user.username }}</h2>
-                                <p class="text-secondary">{{ user.email }}</p>
-                                <p class="text-secondary">Employee ID: {{ user.profile.employee_id }}</p>
-                                <p class="text-secondary">Employee Department: {{ user.profile.section }}</p>
-                              </div>
-                            </div>
-                            <!-- FORM HERE -->
-                          </div>
-                        </div>
-                    </div>
+  <div class="cotainer">
+    <div class="row justify-content-center">
+      <div class="col-md-6">
+        <div class="card">
+          <div class="card-header">{{ user }} Profile</div>
+          <div class="card-body">
+            <div class="content-section">
+              <div class="media">
+                <img
+                  class="rounded-circle account-img"
+                  src="{{ user.profile.image.url }}"
+                />
+                <div class="media-body">
+                  <h2 class="account-heading">{{ user.username }}</h2>
+                  <p class="text-secondary">{{ user.email }}</p>
+                  <p class="text-secondary">
+                    Employee ID: {{ user.profile.employee_id }}
+                  </p>
+                  <p class="text-secondary">
+                    Employee Department: {{ user.profile.section }}
+                  </p>
+                </div>
+              </div>
+              <!-- FORM HERE -->
             </div>
+          </div>
         </div>
+      </div>
     </div>
+  </div>
 </main>
-<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
-</body>
-</html>
+{% endblock Content %}
