prepare Tafkeet using JS and PyArabic

--- a/orient_advances/templates/orient_advances/reports/advance_report.html
+++ b/orient_advances/templates/orient_advances/reports/advance_report.html
@@ -1,6 +1,7 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
 <html>
     <head>
+        <meta http-equiv="Content-type" content="text/html;charset=UTF-8" />
         <title>Advance report</title>
         <style type="text/css">
             body {
@@ -47,6 +48,7 @@
             Bill to: {{ employee_name }}<br/>
             Section: {{ section }}<br/>
             Amount: {{ amount }} <br/>
+            Arabic Amount: {{ ar_no }} <br/>
             <hr class='hrItem' />
         </div>
     </div>
