set logo and background

--- a/orient_advances/templates/about.html
+++ b/orient_advances/templates/about.html
@@ -2,7 +2,6 @@
 {% extends 'base.html' %} {% load crispy_forms_tags %} {% block title %}
 <title>About</title>
 {% endblock title %} {% block PageTitle %}
-<h1>About</h1>
 {% endblock PageTitle %} {% block Content %}
 
-{% block Content %}
+{% endblock Content %}
