--- a/orient_advances/templates/orient_advances/advance_request.html
+++ b/orient_advances/templates/orient_advances/advance_request.html
@@ -5,7 +5,6 @@
 {% endblock title %}
 
 {% block PageTitle %}
-<h1>Advance Request</h1>
   {% endblock PageTitle %}
 
 {% block Content %}
@@ -15,7 +14,7 @@
         <div class="row justify-content-center">
           <div class="col-md-5">
             <div class="card">
-                        <div class="card-header">Register</div>
+                        <div class="card-header">Set Your Request</div>
                         <div class="card-body">
                           <form name="my-form" onsubmit="return validform()" action="" method="POST">{% csrf_token %}
                                 <fieldset class="form-group">
