--- a/orient_advances/templates/base.html
+++ b/orient_advances/templates/base.html
@@ -1,3 +1,4 @@
+{% load static %} 
 <!DOCTYPE html>
 <html lang="en">
     <head>
@@ -8,17 +9,24 @@
         <!-- Fonts -->
         <link rel="dns-prefetch" href="https://fonts.gstatic.com">
         <link href="https://fonts.googleapis.com/css?family=Raleway:300,400,600" rel="stylesheet" type="text/css">
-        <link rel="icon" href="Favicon.png">
+        <link rel="icon" href="{% static 'orient_advances/dist/img/Favicon.ico' %}">
         <!-- Bootstrap CSS -->
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
+        <link rel="stylesheet" href="{% static "orient_advances/dist/css/styles.min.css" %}">
     
     {% block title %}
     <title>Registration</title>
     {% endblock title %}
         
+    <style>
+      body {
+         background-image: url({% static "orient_advances/dist/img/images.jpg" %});
+           background-size: cover;
+            }
+</style>
     </head>
     <body>
-      <nav class="navbar navbar-expand-lg navbar-dark bg-dark sticky-top">
+      <!-- <nav class="navbar navbar-expand-lg navbar-dark bg-dark sticky-top">
         <a class="navbar-brand" href="{% url 'home' %}">Orient</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -55,7 +63,40 @@
             </li>
           </ul>
         </div>
+      </nav> -->
+      <nav class="navbar navbar-expand-lg navbar-dark bg-dark sticky-top">
+        <a class="navbar-brand" href="{% url 'home' %}"><img data-bs-hover-animate="pulse" src="{% static "orient_advances/dist/img/logo.png" %}" width="160" height="80"></a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+      
+        <div class="collapse navbar-collapse col-md-8" id="navbarSupportedContent">
+          <ul class="navbar-nav ml-auto">
+            <li class="nav-item">
+              <a class="nav-link" href="{% url 'home' %}">Home <span class="sr-only">(current)</span></a>
+            </li>
+            {% if user.is_authenticated %}
+            <li class="nav-item">
+              <li class="nav-item" role="presentation"><a class="nav-link active" href="{% url 'profile' %}">Profile</a></li>
+            </li>
+            <li class="nav-item">
+              <li class="nav-item" role="presentation"><a class="nav-link active" href="{% url 'logout' %}">Logout</a></li>
+            </li>
+            <li class="nav-item">
+              <li class="nav-item" role="presentation"><a class="nav-link active" href="{% url 'advance' %}">Request Advance</a></li>
+            </li>
+            {% else %}
+            <li class="nav-item">
+              <li class="nav-item" role="presentation"><a class="nav-link active" href="{% url 'login' %}">Login</a></li>
+            </li>
+            {% endif %}
+              <li class="nav-item">
+                <li class="nav-item" role="presentation"><a class="nav-link active" href="{% url 'advance_about' %}">About</a></li>
+              </li>
+          </ul>
+        </div>
       </nav>
+
     {% if messages %} {% for message in messages %}
     <div class="alert alert-{{ message.tags }}">
       {{ message }}
