--- a/user_management/templates/user_management/registration.html
+++ b/user_management/templates/user_management/registration.html
@@ -18,7 +18,7 @@
                         <div class="card-body">
                             <form name="my-form" onsubmit="return validform()" action="" method="POST">{% csrf_token %}
                                 <fieldset class="form-group">
-                                  {% for field in registration_form %}
+                                  <!-- {% for field in registration_form %}
                                   <p>
                                       {{ field.label_tag }}
                                       {{ field }}
@@ -33,7 +33,8 @@
                                       {% endfor %}
                               
                                   </p>
-                                  {% endfor %}
+                                  {% endfor %} -->
+                                  {{ registration_form|crispy }}
                                 </fieldset>
                                 <div class="col-md-3">
                                     <button type="submit" class="btn btn-primary">
