home page, about design are done, git ignore file, requierment file,

--- a/orient_advances/templates/about.html
+++ b/orient_advances/templates/about.html
@@ -1,7 +1,26 @@
 
-{% extends 'base.html' %} {% load crispy_forms_tags %} {% block title %}
+{% extends 'base.html' %} {% load crispy_forms_tags %} {% load static %} 
+{% block title %}
 <title>About</title>
 {% endblock title %} {% block PageTitle %}
 {% endblock PageTitle %} {% block Content %}
+
+<div class="hpSection1">
+  <img src="{% static 'orient_advances/dist/img/profile-new.jpg' %}" alt="About image" />
+</div>
+<div class="hpSection2">
+  <div class="sectionRow">
+    <div class="wpb_wrapper">
+      <h4 class="vc_custom_heading"><span style="color: #007396;">ORIENT INSURANCE – EGYPT</span></h4>
+                <p class="p1">Orient Takaful Insurance Egypt is an affiliate company of the UAE based <a href="http://www.insuranceuae.com/content/Home/" target="_blank" rel="noopener">Orient Insurance PJSC</a> which is the market leader in UAE and operating in 7 countries and 100% owned by Al Futtaim business group. Orient Takaful Insurance Egypt is an Egyptian shareholding company subject to the provisions of Law No. 10 of 1981 and its amendments and has a license No. (30) from the General Authority for Financial Control. It is also worth to mention that our mother company is “A” rated by both S&amp;P and AM Best. Orient Takaful Insurance Egypt is a Joint Venture between Orient PJSC and 2 UAE based banks operating in Egypt.</p>
+                <p class="p1">We have started our operation in Egypt in 2009 and are writing all lines of non-life business Including medical. Orient Takaful Insurance Egypt is now ranked No.1 in Takaful market &amp; No.4 in the Egyptian Market Non-life insurance market.</p>
+                <p class="p1">Orient Takaful Insurance Company is the fastest growing insurance company in the Egyptian market with annual growth rate exceeding 30%, transacts non -life insurance business in Egypt. Orient Takaful Insurance Company follows the laws No. 10 for year 1981 and is registered in the Egyptian Financial Supervisory Authority (EFSA).</p>
+                <p class="p1">Orient Takaful Insurance Company is committed to providing an outstanding and innovative insurance service through a variety of distribution channels including tied agents, direct agents and freelance brokers.</p>
+                <p class="p1"><span class="s1">Orient Insurance PJSC has provided Parental Guarantee to its affiliate Orient Takaful Insurance Egypt for the purpose of obtaining&nbsp;</span><span class="s2">credit</span><span class="s3">&nbsp;</span><span class="s1">rating from international rating agencies&nbsp;</span><span class="s1">,</span><span class="s2">and increasing its clients’ confidence.</span></p>
+                <p class="p1"><span class="s1">To read the full details of the parental guarantee provided, please click&nbsp;&nbsp;</span><a href="http://www.orienttakaful.com/wp-content/uploads/2019/04/guarntee-agreement.pdf" target="_blank" rel="noopener noreferrer"></a><a href="http://www.orienttakaful.com/wp-content/uploads/2019/04/guarntee-agreement.pdf" target="_blank" rel="noopener noreferrer">here</a></p>
+                <p class="p1">Effective June 21, 2019, AM Best has assigned an FSR of A (Excellent) and a Long-Term ICR of “a+” to Orient Takaful Insurance Company (S.A.E.) (Orient Takaful) (Egypt), a subsidiary of Orient. The outlook assigned to these ratings is stable. The ratings reflect Orient’s balance sheet strength, which AM Best categorizes as very strong, as well as its very strong operating performance, neutral business profile and appropriate enterprise risk management. For more info please click <a href="&nbsp;http://news.ambest.com/presscontent.aspx?refnum=28122&amp;altsrc=9" target="_blank" rel="noopener noreferrer">here</a></p>
+                </div>
+            </div>
+          </div>
 
 {% endblock Content %}
